Prevent wrapping of nav list items.

--- a/site/assets/css/main.scss
+++ b/site/assets/css/main.scss
@@ -282,6 +282,7 @@ body {
 						display: block;
 						overflow: hidden;
 						text-overflow: ellipsis;
+						text-wrap: nowrap;
 					}
 				}
 			}
